--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body {
     flex-direction: column;
     background: #3A66DF;
     cursor: pointer;
+    box-shadow: 0 8px 10px rgba(0,0,0,0.5);
 }
 .search-list__vars span {
     padding: 10px;
